# ChangeLog for xfce-extra/exo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Dec 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.92.ebuild,
  exo-9999.ebuild:
  Use gtk-doc instead of xsltproc for docs

  15 Dec 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.92.ebuild,
  exo-9999.ebuild:
  Added USE=doc

  17 Nov 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.92.ebuild,
  exo-9999.ebuild:
  Moved XFCE_CONFIG to pkg_setup

*exo-0.3.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org> +exo-0.3.92.ebuild:
  Xfce-4.6 Beta 2 bump

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Removed libwww dependency, this has been fixed in trunk

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Added libwww dependency, bug 234142

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Removed unneeded workarounds, those bugs have been fixed upstream

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Cleanup

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Removed old mcs references

  29 May 2008; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  python_mod_* functions are already aware

  18 Dec 2007; Christoph Mende <angelos@gentoo.org> exo-9999.ebuild:
  Moved MY_PN before inherit as we need it in the eclass

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
