@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST exo-0.3.92.tar.bz2 1398751 RMD160 6f4b02eb56b94968c383d915eab038226e2f91a9 SHA1 61a7090f175157bbc4817903c7cae52a20ec3a70 SHA256 585f6c433ad4e0bd7dcb2aa98456cca30562ddd864bac2bb4b4338a0939d7064
-EBUILD exo-0.3.92.ebuild 1050 RMD160 23dce76ab75070ff33c3bd55a04bbc66e1ead493 SHA1 fa91093ae0170c0c97bb8704dc01b94c3bf59d4d SHA256 599f08a96a85177d4371bcf6ab4db5f65fd3b4b81e95830f6791974335b357fe
-EBUILD exo-9999.ebuild 1068 RMD160 3139efd159ef9b8ea417aa21aa8a3d1d90da02e3 SHA1 4854f283bd86ba110d44c4931fe25633bebcac5a SHA256 084fa8913883dc04599d90c54e19f79de29b2c22d16b78a17893ab19d9f683f0
-MISC ChangeLog 1480 RMD160 cfa7058905016c4620751e7de39162973ddf6496 SHA1 5e35828908cc4a74435252d130cf8ef45252e039 SHA256 d59d52b90cd9583beb80400a6579a8cbe868b556cb7ac6fa3bc844b073b27132
+DIST exo-0.3.93.tar.bz2 1435165 RMD160 bc72b6b7a9dd0f12f2429779d1b2999e3fc9f864 SHA1 85395be64d267d48b39496c48ff651a65a365efc SHA256 91d005530c78a20de6ccde0bca72817d8caf8e8ffdc2152c7a80d4a77ef7d5b5
+EBUILD exo-0.3.92.ebuild 1050 RMD160 9a99159c0b1a74e914dd18c6811961bf3af80eb0 SHA1 aa137b5991c4e08a78f0004f03b6940cdf1fdea3 SHA256 c6ca4876b6fdf0abe671d4f961728bce9481f4a98acffc5bdd926896ac5f9edf
+EBUILD exo-0.3.93.ebuild 1050 RMD160 ef41a9f7907b8bf8bc620d64fa30557cffebed9e SHA1 b9a9b2baa453fd19ec3c5ec290e16164a1269cc2 SHA256 f1e827e7fdd70767c601ad7825fe5773b73e15734ff89fecf3ec150b1d1411e1
+EBUILD exo-9999.ebuild 1068 RMD160 0858df41dd0f81587bebe1257733ab60da33b484 SHA1 8394ae2e302dd89b0127817b9a9cedbc75ecaee3 SHA256 3186ee18873f4bc8545e58401d86dcc321d1a52c5ecf9875afe48d33219147e4
+MISC ChangeLog 1597 RMD160 1af696f5b33ae26ce8605f03e9c8179b72867f6b SHA1 c7b349cffe35a73ccbea9ba6b65847ad74a1417a SHA256 496e67436881d8719c367a7aa86a2fa61f7be9a16b8dd931f5e49201112c2d24
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklK25cACgkQKhnDs22gwa9L1gCfT8OKP8DPfPLaFX4Zdzhvnnkc
-OmsAn2RP6TR7XFcXiggeUgW7ZgTE1MKA
-=rvJS
+iEYEARECAAYFAkluEKsACgkQKhnDs22gwa+kUACghkuY3heYwN+yXL40kMeT/E8P
+VHUAn3Ru7jQWZq8ri/+YRo4IzfBCDR/M
+=p4Yd
 -----END PGP SIGNATURE-----
